Refine CSS for HTML report
git-svn-id: http://svn.code.sf.net/p/gmetrics/code/trunk@32 316bb773-894d-4c1b-afab-fbf10aed1fe6

--- a/src/main/resources/gmetrics-basic-html-report.css
+++ b/src/main/resources/gmetrics-basic-html-report.css
@@ -19,10 +19,11 @@
         }
         .package {
             color: black;
+            font-style: italic;
             font-size: 90%;
         }
         .class {
-            color: orange;
+            color: blue;
             font-size: 80%;
         }
         .method {
