--- a/src/main/resources/gmetrics-basic-html-report.css
+++ b/src/main/resources/gmetrics-basic-html-report.css
@@ -30,18 +30,9 @@
             color: gray;
             font-size: 70%;
         }
-
-        .indent0 { }
-        .indent1 { padding-left: 5px; }
-        .indent2 { padding-left: 10px; }
-        .indent3 { padding-left: 15px; }
-        .indent4 { padding-left: 20px; }
-        .indent5 { padding-left: 25px; }
-        .indent6 { padding-left: 30px; }
-        .indent7 { padding-left: 35px; }
-        .indent8 { padding-left: 40px; }
-        .indent9 { padding-left: 45px; }
-        .indent10 { padding-left: 50px; }
+        .packageIndent { }
+        .classIndent { padding-left: 10px; }
+        .methodIndent { padding-left: 20px; } 
 
         .rowTypePrefix {
             font-size: 80%;
